force-app/main/default/objects/Account/fields/Activities_Done__c.field-meta.xml
<CustomField>
    <fullName>Activities_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activities Done</label>
    <type>Checkbox</type>
</CustomField>