force-app/main/default/objects/Account/fields/CSN__c.field-meta.xml
<CustomField>
    <fullName>CSN__c</fullName>
    <label>CSN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>