force-app/main/default/objects/Account/fields/DUNS__c.field-meta.xml
<CustomField>
    <fullName>DUNS__c</fullName>
    <label>DUNS #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>