force-app/main/default/objects/Account/fields/Eligible_for_Survey__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Survey</label>
    <type>Checkbox</type>
</CustomField>