force-app/main/default/objects/Account/fields/Email_System__c.field-meta.xml
<CustomField>
    <fullName>Email_System__c</fullName>
    <label>Email System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Outlook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>