force-app/main/default/objects/Account/fields/Industries__c.field-meta.xml
<CustomField>
    <fullName>Industries__c</fullName>
    <label>Industries</label>
    <length>100</length>
    <type>Text</type>
</CustomField>