force-app/main/default/objects/Account/fields/Legacy_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Updated_Date__c</fullName>
    <label>Legacy Updated Date</label>
    <type>DateTime</type>
</CustomField>